<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/port_root_vertical_padding"
    android:paddingLeft="@dimen/port_root_horizontal_pading"
    android:paddingRight="@dimen/port_root_horizontal_pading"
    android:paddingTop="@dimen/port_root_vertical_padding"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:id="@+id/home_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/home_team_flag"
            android:src="@drawable/essendon" />

        <TextView
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="start"
            android:paddingLeft="@dimen/port_team_name_pad_left"
            android:paddingStart="@dimen/port_team_name_pad_left"
            android:text="@string/home_team_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

        <TextView
            android:id="@+id/goals_for_home_team"
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/goals_for_home_team"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="."
            android:textColor="#616161"
            android:textSize="@dimen/port_team_score_size" />


        <TextView
            android:id="@+id/number_of_behind_team_home"
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/behinds_for_home_team"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

        <TextView
            android:id="@+id/total_score_home_team"
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/score_for_home_team"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/oppose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/home_team"
        android:paddingBottom="@dimen/port_vertical_space"
        android:paddingTop="@dimen/port_vertical_space"
        android:text="@string/versus"
        android:textColor="#616161"
        android:textSize="@dimen/port_vs_tw" />

    <LinearLayout
        android:id="@+id/away_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/oppose"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/visitor_team_flag"
            android:src="@drawable/melbourne" />

        <TextView
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="start|center"
            android:paddingLeft="@dimen/port_team_name_pad_left"
            android:paddingStart="@dimen/port_team_name_pad_left"
            android:text="@string/visitor_team_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

        <TextView
            android:id="@+id/goals_for_visitor_team"
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/goals_for_visitor_team"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="."
            android:textColor="#616161"
            android:textSize="@dimen/port_team_score_size" />


        <TextView
            android:id="@+id/number_of_behind_visitor_team"
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/behinds_for_visitor_team"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

        <TextView
            android:id="@+id/total_score_visitor_team"
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/score_for_visitor_team"
            android:textColor="@android:color/black"
            android:textSize="@dimen/port_team_score_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/points_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/away_team"
        android:layout_marginTop="@dimen/port_vertical_divider"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_team"
                android:textColor="#616161"
                android:textSize="@dimen/port_team_header_size" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/port_half_vertical_space"
                android:paddingTop="@dimen/port_quart_vertical_space"
                android:text="@string/home_team_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/port_team_name" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/port_half_vertical_space"
                android:layout_marginLeft="@dimen/port_horizontal_space"
                android:layout_marginRight="@dimen/port_horizontal_space"
                android:layout_marginTop="@dimen/port_quart_vertical_space"
                android:onClick="increaseGoalsAndScoreHomeTeam"
                android:text="@string/points_per_goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/port_horizontal_space"
                android:layout_marginRight="@dimen/port_horizontal_space"
                android:layout_marginTop="@dimen/port_half_vertical_space"
                android:onClick="increaseBehindAndScoreHomeTeam"
                android:text="@string/point_per_behind" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/h_ll_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/visitor_team"
                android:textColor="#616161"
                android:textSize="@dimen/port_team_header_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/port_half_vertical_space"
                android:paddingTop="@dimen/port_quart_vertical_space"
                android:text="@string/visitor_team_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/port_team_name" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/port_half_vertical_space"
                android:layout_marginLeft="@dimen/port_horizontal_space"
                android:layout_marginRight="@dimen/port_horizontal_space"
                android:layout_marginTop="@dimen/port_quart_vertical_space"
                android:onClick="increaseGoalsAndScoreVisitorTeam"
                android:text="@string/points_per_goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/port_horizontal_space"
                android:layout_marginRight="@dimen/port_horizontal_space"
                android:layout_marginTop="@dimen/port_half_vertical_space"
                android:onClick="increaseBehindAndScoreVisitorTeam"
                android:text="@string/point_per_behind" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/end_match_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reset_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/port_vertical_space"
        android:onClick="updateView"
        android:text="@string/end_of_match" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetMatch"
        android:text="@string/reset_button" />

</RelativeLayout>
